# kb-search-app

./: README.md  pyproject.toml  requirements.txt
backend/: Request.py  feedback.db  feedback_texts.pkl  main.py  vector_index.index
data/: build_faiss_index.py  cleaned_dataset.json  customer_support_data.json  feedback_log.json  fineData.py  free_faiss_index.index  free_responses.json  myconn.py  prepareData.py  pyproject.toml  retrain_index.py
frontend/: app.py
