[project]
name = "kb-search-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.11.0",
    "fastapi>=0.115.12",
    "gensim>=4.3.2",
    "mysql-connector-python>=9.3.0",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "sentence-transformers>=4.1.0",
    "spacy>=3.8.5",
    "streamlit>=1.45.0",
    "uvicorn>=0.34.2",
]
